Successfull Tornado webserver tests. MySQL creating data entry for temperature

--- a/TornadoTest/serverMQTT/ds18b20.cfg
+++ b/TornadoTest/serverMQTT/ds18b20.cfg
@@ -8,7 +8,9 @@ level = 20.0
 measure = C
 
 [server]
+ip_address = 192.168.0.108
 port = 1883
+bottle_server_port = 8810
 
 [mqtt_home_room_temperature_publisher]
 ip_address = 192.168.0.108
