--- a/Android/MQTTTest/app/src/main/AndroidManifest.xml
+++ b/Android/MQTTTest/app/src/main/AndroidManifest.xml
@@ -2,11 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.root.mqtttest">
 
-    <uses-permission
-        android:name="android.permission.INTERNET"></uses-permission>
-
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -14,7 +12,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,18 +19,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".Services.NotificationService"
+
+        <service
+            android:name=".Services.NotificationService"
             android:enabled="true">
-            <!--<intent-filter>-->
-                <!--<action android:name=".Services.NotifiactionService"></action>-->
-            <!--</intent-filter>-->
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name=".Services.NotifiactionService"></action> -->
+            <!-- </intent-filter> -->
         </service>
-        <service android:name=".Services.MqttService"
-            android:enabled="true">
-            <!--<intent-filter>-->
-                <!--<action android:name=".Services.NotifiactionService"></action>-->
-            <!--</intent-filter>-->
-        </service>
+        <!-- <service android:name=".Services.MqttService" -->
+        <!-- android:enabled="true"> -->
+        <!-- &lt;!&ndash;<intent-filter>&ndash;&gt; -->
+        <!-- &lt;!&ndash;<action android:name=".Services.NotifiactionService"></action>&ndash;&gt; -->
+        <!-- &lt;!&ndash;</intent-filter>&ndash;&gt; -->
+        <!-- </service> -->
+        <activity android:name=".Activities.RaspConfigActivity"></activity>
     </application>
 
 </manifest>
