--- a/Android/MQTTTest/app/src/main/AndroidManifest.xml
+++ b/Android/MQTTTest/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label=""
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,7 +34,11 @@
         <!-- &lt;!&ndash;<action android:name=".Services.NotifiactionService"></action>&ndash;&gt; -->
         <!-- &lt;!&ndash;</intent-filter>&ndash;&gt; -->
         <!-- </service> -->
-        <activity android:name=".Activities.RaspConfigActivity"></activity>
+        <activity android:name=".Activities.RaspConfigActivity" />
+        <activity
+            android:name=".Activities.SocketConnectionActivity"
+            android:label="@string/title_activity_socket_connection" />
+        <activity android:name=".Activities.AirConditionerActivity"></activity>
     </application>
 
 </manifest>
